--- a/views/register/face-form.ejs
+++ b/views/register/face-form.ejs
@@ -869,7 +869,7 @@
 
                                             <div class="d-sm-flex justify-content-end">
                                                 <div class="field-wrapper">
-                                                    <button type="submit" class="btn btn-primary" value="" id="submit">
+                                                    <button type="submit" class="btn btn-info" value="" id="submit">
                                                         Register
                                                     </button>
                                                 </div>
