--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -112,12 +112,26 @@
                         <li class="">
                             <a href="/dormitory/pass-request-status"> Pass request Status </a>
                         </li>
-                        <li class="d-flex justify-content-center">
+                        <li class="">
                             <a href="/dormitory/admin/pass-requests">
-                                Pass Requests & Status
+                                Pass Requests
                             </a>
                         </li>
                     </ul>
+                </li>
+                <li class="menu">
+                    <a href="/dormitory/admin/attendence-list" aria-expanded="false" class="dropdown-toggle">
+                        <div class="">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round" class="feather feather-target">
+                                <circle cx="12" cy="12" r="10"></circle>
+                                <circle cx="12" cy="12" r="6"></circle>
+                                <circle cx="12" cy="12" r="2"></circle>
+                            </svg>
+                            <span>Attendence List</span>
+                        </div>
+                    </a>
                 </li>
 
                 <li class="menu">
