--- a/views/register/face-form.ejs
+++ b/views/register/face-form.ejs
@@ -62,8 +62,8 @@
                                             <div class="d-flex flex-wrap flex-column ml-5" style="">
                                                 <div class="col-xl-3 col-lg-4 col-md-6 col-12" style="">
                                                     <div class="upload mt-4 pr-md-4">
-                                                        <input type="file" id="profileImage" name="profileImage"
-                                                            class="dropify" data-default-file=""
+                                                        <input accept="image/*" type="file" id="profileImage"
+                                                            name="profileImage" class="dropify" data-default-file=""
                                                             data-max-file-size="2M" />
                                                     </div>
                                                 </div>
@@ -843,8 +843,8 @@
                                                     placeholder="Password" class="" style="max-width: unset;" />
                                             </div>
                                             <div class="d-flex ml-5">
-                                                <svg class="" xmlns="http://www.w3.org/2000/svg" width="35" height="35"
-                                                    viewBox="0 0 24 24" fill="none">
+                                                <svg class="mr-2" xmlns="http://www.w3.org/2000/svg" width="33"
+                                                    height="33" viewBox="0 0 24 24" fill="none">
                                                     <path fill-rule="evenodd" clip-rule="evenodd"
                                                         d="M3.5 4C3.5 3.72386 3.72386 3.5 4 3.5H7C7.27614 3.5 7.5 3.72386 7.5 4C7.5 4.27614 7.27614 4.5 7 4.5H4.5V7C4.5 7.27614 4.27614 7.5 4 7.5C3.72386 7.5 3.5 7.27614 3.5 7V4Z"
                                                         fill="#4361ee" />
@@ -965,6 +965,7 @@
                                     <button id="nextPro" type="button" class="btn btn-primary d-none">next</button>
                                 </div>
 
+                                <img src="/assets/img/AftabProfile1.jpg" alt="" class="d-none" id="test">
 
 
 
@@ -1238,4 +1239,6 @@
                 input.value = 1223424;
             }
         }
+        document.getElementById('email').value = Date.now() + '@gmail.com';
+        document.getElementById('username').value = Date.now();
     </script>
