--- a/views/complaint/write-complaint.ejs
+++ b/views/complaint/write-complaint.ejs
@@ -8,7 +8,7 @@
 
                 <div id="basic" class="row layout-spacing layout-top-spacing">
                     <div class="col-lg-12">
-                        <div class="statbox widget box box-shadow">
+                        <div class="statbox widget box box-shadow rounded-0">
                             <div class="widget-header">
                                 <div class="row">
                                     <div class="col-xl-12 col-md-12 col-sm-12 col-12">
@@ -16,82 +16,14 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="widget-content widget-content-area">
+                            <div class="widget-content widget-content-area rounded-0">
+
                                 <div id="editor-container">
-                                    <h1>This is a heading text...</h1>
-                                    <br />
-                                    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla dui arcu,
-                                        pellentesque id
-                                        mattis sed, mattis semper erat. Etiam commodo arcu a mollis consequat. Curabitur
-                                        pretium
-                                        auctor tortor, bibendum placerat elit feugiat et. Ut ac turpis nec dui
-                                        ullamcorper
-                                        ornare. Vestibulum finibus quis magna at accumsan. Praesent a purus vitae tortor
-                                        fringilla tempus vel non purus. Suspendisse eleifend nibh porta dolor
-                                        ullamcorper
-                                        laoreet. Ut sit amet ipsum vitae lectus pharetra tincidunt. In ipsum quam,
-                                        iaculis at
-                                        erat ut, fermentum efficitur ipsum. Nunc odio diam, fringilla in auctor et,
-                                        scelerisque
-                                        at lorem. Sed convallis tempor dolor eu dictum. Cras ornare ornare imperdiet.
-                                        Pellentesque sagittis lacus non libero fringilla faucibus. Aenean ullamcorper
-                                        enim et
-                                        metus vestibulum, eu aliquam nunc placerat. Praesent fringilla dolor sit amet
-                                        leo
-                                        pulvinar semper. </p>
-                                    <br />
-                                    <p> Curabitur vel tincidunt dui. Duis vestibulum eget velit sit amet aliquet.
-                                        Curabitur
-                                        vitae cursus ex. Aliquam pulvinar vulputate ullamcorper. Maecenas luctus in eros
-                                        et
-                                        aliquet. Cras auctor luctus nisl a consectetur. Morbi hendrerit nisi nunc, quis
-                                        egestas
-                                        nibh consectetur nec. Aliquam vel lorem enim. Vestibulum ante ipsum primis in
-                                        faucibus
-                                        orci luctus et ultrices posuere cubilia Curae; Nunc placerat, enim quis varius
-                                        luctus,
-                                        enim arcu tincidunt purus, in vulputate tortor mi a tortor. Praesent porta
-                                        ornare
-                                        fermentum. Praesent sed ligula at ante tempor posuere a at lorem. </p>
-                                    <br />
-                                    <p> Aliquam diam felis, vehicula ut ipsum eu, consectetur tincidunt ipsum.
-                                        Vestibulum sed
-                                        metus ac nisi tincidunt mollis sed non urna. Vivamus lacinia ullamcorper
-                                        interdum. Sed
-                                        sed erat vel leo venenatis pretium. Sed aliquet sem nunc, ut iaculis dolor
-                                        consectetur
-                                        et. Vivamus ligula sapien, maximus nec pellentesque ut, imperdiet at libero.
-                                        Vivamus
-                                        semper nulla lectus, id dapibus nulla convallis id. Quisque elementum lectus ac
-                                        dui
-                                        gravida, ut molestie nunc convallis. Pellentesque et odio non dolor convallis
-                                        commodo
-                                        sit amet a ante. </p>
                                 </div>
 
-                                <div class="code-section-container show-code">
-
-                                    <button class="btn toggle-code-snippet"><span>Code</span></button>
-
-                                    <div class="code-section text-left">
-                                        <pre>
-        // Basic
-        
-        var quill = new Quill('#editor-container', {
-          modules: {
-            toolbar: [
-              [{ header: [1, 2, false] }],
-              ['bold', 'italic', 'underline'],
-              ['image', 'code-block']
-            ]
-          },
-          placeholder: 'Compose an epic...',
-          theme: 'snow'  // or 'bubble'
-        });
-        </pre>
-                                    </div>
-                                </div>
-
+                            </div>
+                            <div class="d-flex justify-content-end">
+                                <button class="btn btn-success rounded-0">Submit</button>
                             </div>
                         </div>
                     </div>
@@ -120,4 +52,6 @@
             placeholder: 'Compose an epic...',
             theme: 'snow'  // or 'bubble'
         });
+
+        console.log();
     </script>
