--- a/views/notice-board/index.ejs
+++ b/views/notice-board/index.ejs
@@ -33,7 +33,8 @@
                                             <div id="collapseTwo" class="collapse show" aria-labelledby="headingTwo"
                                                 data-parent="#add_task_accordion">
                                                 <div class="card-body">
-                                                    <form action="javascript:void(0);">
+                                                    <form enctype="multipart/form-data" action="/dormitory/notice-board"
+                                                        method="post">
                                                         <div class="row">
                                                             <div class="col-md-12">
                                                                 <div class="task-title mb-4">
@@ -49,7 +50,7 @@
                                                                     </svg>
                                                                     <input id="s-task" type="text"
                                                                         placeholder="Notice Heading"
-                                                                        class="form-control" name="task">
+                                                                        class="form-control" name="noticeHeading">
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -66,17 +67,18 @@
                                                                             points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2">
                                                                         </polygon>
                                                                     </svg>
-                                                                    <textarea id="s-text" placeholder="Notice Text"
-                                                                        class="form-control" name="taskText"></textarea>
+                                                                    <textarea id="s-text" placeholder="Notice Content"
+                                                                        class="form-control"
+                                                                        name="noticeContent"></textarea>
                                                                 </div>
                                                             </div>
                                                         </div>
                                                         <div class="row">
                                                             <div class="col-md-12">
                                                                 <div class="upload mt-4 pr-md-4">
-                                                                    <input type="file" id="input-file-max-fs"
-                                                                        class="dropify" data-default-file=""
-                                                                        data-max-file-size="2M" />
+                                                                    <input name="noticeFile" type="file"
+                                                                        id="input-file-max-fs" class="dropify"
+                                                                        data-default-file="" data-max-file-size="2M" />
                                                                     <p class="mt-2"><i
                                                                             class="flaticon-cloud-upload mr-1"></i>
                                                                         Upload File</p>
@@ -355,7 +357,7 @@
             document.getElementById('addNotice').click();
         })
 
-        document.forms[0].addEventListener('submit', (evt) => {
-            console.log(this);
+        document.getElementById('addInfoBtn').addEventListener('click', async (evt) => {
+            document.forms[0].submit();
         })
     </script>
