--- a/views/complaint/write-complaint.ejs
+++ b/views/complaint/write-complaint.ejs
@@ -16,15 +16,18 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="widget-content widget-content-area rounded-0">
+                            <div class="widget-content widget-content-area rounded-0" id="test">
 
                                 <div id="editor-container">
                                 </div>
 
                             </div>
-                            <div class="d-flex justify-content-end">
-                                <button class="btn btn-success rounded-0">Submit</button>
-                            </div>
+                            <form id="theForm" action="/dormitory/student/post-complaint" method="post">
+                                <input type="text" name="formattedComplaint" id="complaint" class="d-none">
+                                <div class="d-flex justify-content-end">
+                                    <button class="btn btn-success rounded-0" id="submit">Submit</button>
+                                </div>
+                            </form>
                         </div>
                     </div>
                 </div>
@@ -53,5 +56,19 @@
             theme: 'snow'  // or 'bubble'
         });
 
-        console.log();
+        //document.getElementById('complaint').value = document.getElementById('editor-container');
+        //document.getElementById('test').innerHTML = document.getElementById('complaint').value;
+        //console.dir(document.getElementById('complaint').value)
+
+        $(document).ready(function () {
+            $("#theform").on("submit", function (evt) {
+                evt.stopPropagation();
+                evt.preventDefault();
+                console.log('helllo');
+                var hvalue = $('#editor-container').html();
+                $(this).append("<textarea name='content' style='display:none'>" + hvalue + "</textarea>");
+            });
+        });
+        console.log(document.getElementById('theForm'))
+
     </script>
