--- a/views/register/face-form.ejs
+++ b/views/register/face-form.ejs
@@ -827,9 +827,46 @@
                                                             </div>
 
                                                         </div>
+
+                                                        <div class="edu col-md-11 mx-auto">
+
+                                                            <div class="edu-section">
+                                                                <div class="row">
+                                                                    <div class="col-md-12">
+                                                                        <h4 class="text-center d-block">Hostel Allotment
+                                                                        </h4>
+                                                                    </div>
+                                                                    <div class="col-md-12">
+                                                                        <div class="form-group">
+                                                                            <label for="degree3">Enter Hostel
+                                                                                Number</label>
+                                                                            <input name="hostelInfo[hostelNo]"
+                                                                                type="text" class="form-control mb-4"
+                                                                                id="hostelNo"
+                                                                                placeholder="Enter Hostel #" value="">
+                                                                        </div>
+                                                                    </div>
+
+                                                                    <div class="col-md-12">
+                                                                        <div class="form-group">
+                                                                            <label for="degree3">Enter Room
+                                                                                Number</label>
+                                                                            <input name="hostelInfo[roomNo]" type="text"
+                                                                                class="form-control mb-4" id="roomNo"
+                                                                                placeholder="Enter Room #" value="">
+                                                                        </div>
+                                                                    </div>
+
+                                                                </div>
+
+                                                            </div>
+
+                                                        </div>
                                                     </div>
                                                 </div>
                                             </div>
+
+
 
 
                                             <div id="password-field" class="field-wrapper input mb-2 ml-5">
