--- a/views/register/face-form.ejs
+++ b/views/register/face-form.ejs
@@ -69,10 +69,10 @@
                                                 </div>
                                                 <div class="d-flex flex-column justify-content-center" style="">
                                                     <div id="username-field col-3" class="field-wrapper input">
-                                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                                                            viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                                                            stroke-width="2" stroke-linecap="round"
-                                                            stroke-linejoin="round" class="feather feather-user">
+                                                        <svg xmlns="" width="24" height="24" viewBox="0 0 24 24"
+                                                            fill="none" stroke="currentColor" stroke-width="2"
+                                                            stroke-linecap="round" stroke-linejoin="round"
+                                                            class="feather feather-user">
                                                             <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
                                                             <circle cx="12" cy="7" r="4"></circle>
                                                         </svg>
@@ -80,16 +80,30 @@
                                                             class="form-control" placeholder="Full name" />
                                                     </div>
                                                     <div id="username-field col-3" class="field-wrapper input">
-                                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                                                            viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                                                            stroke-width="2" stroke-linecap="round"
-                                                            stroke-linejoin="round" class="feather feather-user">
+                                                        <svg xmlns="" width="24" height="24" viewBox="0 0 24 24"
+                                                            fill="none" stroke="currentColor" stroke-width="2"
+                                                            stroke-linecap="round" stroke-linejoin="round"
+                                                            class="feather feather-user">
                                                             <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
                                                             <circle cx="12" cy="7" r="4"></circle>
                                                         </svg>
                                                         <input id="username" name="username" type="text"
                                                             class="form-control" placeholder="Username">
                                                     </div>
+
+                                                    <div id="username-field col-3" class="field-wrapper input">
+                                                        <svg xmlns="" width="24" height="24" viewBox="0 0 24 24"
+                                                            fill="none" stroke="currentColor" stroke-width="2"
+                                                            stroke-linecap="round" stroke-linejoin="round"
+                                                            class="feather feather-user">
+                                                            <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
+                                                            <circle cx="12" cy="7" r="4"></circle>
+                                                        </svg>
+                                                        <input id="fatherName" name="fatherName" type="text"
+                                                            class="form-control" placeholder="Enter Father Name">
+                                                    </div>
+
+
                                                     <div class="d-flex justify-content-end">
                                                         <label class="dob-input d-flex align-items-center">Date of
                                                             Birth</label>
@@ -870,10 +884,9 @@
 
 
                                             <div id="password-field" class="field-wrapper input mb-2 ml-5 d-none">
-                                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                                                    viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                                                    stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                                                    class="feather feather-lock">
+                                                <svg xmlns="" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                                    stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                                    stroke-linejoin="round" class="feather feather-lock">
                                                     <rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect>
                                                     <path d="M7 11V7a5 5 0 0 1 10 0v4"></path>
                                                 </svg>
@@ -881,8 +894,8 @@
                                                     placeholder="Password" class="" style="max-width: unset;" />
                                             </div>
                                             <div class="d-flex ml-5">
-                                                <svg class="mr-2" xmlns="http://www.w3.org/2000/svg" width="33"
-                                                    height="33" viewBox="0 0 24 24" fill="none">
+                                                <svg class="mr-2" xmlns="" width="33" height="33" viewBox="0 0 24 24"
+                                                    fill="none">
                                                     <path fill-rule="evenodd" clip-rule="evenodd"
                                                         d="M3.5 4C3.5 3.72386 3.72386 3.5 4 3.5H7C7.27614 3.5 7.5 3.72386 7.5 4C7.5 4.27614 7.27614 4.5 7 4.5H4.5V7C4.5 7.27614 4.27614 7.5 4 7.5C3.72386 7.5 3.5 7.27614 3.5 7V4Z"
                                                         fill="#4361ee" />
