--- a/views/student/profile.ejs
+++ b/views/student/profile.ejs
@@ -13,17 +13,26 @@
                         <div class="widget-content widget-content-area">
                             <div class="d-flex justify-content-between">
                                 <h3 class="">Profile</h3>
-                                <a href="/dormitory/student/account-settings" class="mt-2 edit-profile"> <svg
-                                        xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                                        fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                                        stroke-linejoin="round" class="feather feather-edit-3">
+                                <a href="/dormitory/student/<%= hostelliteInfo.username %>/edit"
+                                    class="mt-2 edit-profile"> <svg xmlns="http://www.w3.org/2000/svg" width="24"
+                                        height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                        stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                                        class="feather feather-edit-3">
                                         <path d="M12 20h9"></path>
                                         <path d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"></path>
                                     </svg></a>
                             </div>
                             <div class="text-center user-info">
-                                <img width="90" height="90" src="/assets/img/AftabProfile1.jpg" alt="avatar">
-                                <p class="">Aftab</p>
+                                <% if (hostelliteInfo.profileImage){ %>
+                                    <img width="90" height="90"
+                                        src="/hostel-files/hostellite-profile-images/<%= hostelliteInfo.profileImage %>"
+                                        alt="avatar">
+                                    <% }else{ %>
+                                        <img width="90" height="90" src="/assets/img/girl-2.png" alt="avatar">
+                                        <% } %>
+                                            <p class="">
+                                                <%= hostelliteInfo.fullName %>
+                                            </p>
                             </div>
                             <div class="user-info-list">
 
@@ -39,7 +48,8 @@
                                                 <line x1="6" y1="1" x2="6" y2="4"></line>
                                                 <line x1="10" y1="1" x2="10" y2="4"></line>
                                                 <line x1="14" y1="1" x2="14" y2="4"></line>
-                                            </svg> Computer Science
+                                            </svg>
+                                            <%= hostelliteInfo.education.degree.name %>
                                         </li>
                                         <li class="contacts-block__item">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
@@ -50,27 +60,32 @@
                                                 <line x1="16" y1="2" x2="16" y2="6"></line>
                                                 <line x1="8" y1="2" x2="8" y2="6"></line>
                                                 <line x1="3" y1="10" x2="21" y2="10"></line>
-                                            </svg>10 feb 1950
+                                            </svg>
+                                            <%= hostelliteInfo.DOB[0] +" " + hostelliteInfo.DOB[1] +" " + hostelliteInfo.DOB[2] %>
+                                        </li>
+                                        <li class=" contacts-block__item">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                                    viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                                    stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                                                    class="feather feather-map-pin">
+                                                    <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path>
+                                                    <circle cx="12" cy="10" r="3"></circle>
+                                                </svg>
+                                                <%= hostelliteInfo.contact.address.streetAddress %>
                                         </li>
                                         <li class="contacts-block__item">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                                                viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-                                                stroke-linecap="round" stroke-linejoin="round"
-                                                class="feather feather-map-pin">
-                                                <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path>
-                                                <circle cx="12" cy="10" r="3"></circle>
-                                            </svg>IMS Peshawar, Phase 7
-                                        </li>
-                                        <li class="contacts-block__item">
-                                            <a href="mailto:example@mail.com"><svg xmlns="http://www.w3.org/2000/svg"
-                                                    width="24" height="24" viewBox="0 0 24 24" fill="none"
-                                                    stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                                                    stroke-linejoin="round" class="feather feather-mail">
+                                            <a href="mailto:<%= hostelliteInfo.contact.email %>" class="d-flex"><svg
+                                                    xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                                    viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                                    stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                                                    class="feather feather-mail">
                                                     <path
                                                         d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z">
                                                     </path>
                                                     <polyline points="22,6 12,13 2,6"></polyline>
-                                                </svg>hahah@gmail.com</a>
+                                                </svg>
+                                                <%= hostelliteInfo.contact.email %>
+                                            </a>
                                         </li>
                                         <li class="contacts-block__item">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
@@ -80,10 +95,12 @@
                                                 <path
                                                     d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z">
                                                 </path>
-                                            </svg> +92 0340 --------
+                                            </svg>
+                                            <%= hostelliteInfo.contact.phoneNo %>
                                         </li>
+                                        <hr>
                                         <li class="contacts-block__item text-center">
-                                            hostel id: 1Ds3Ds
+                                            username: <%= hostelliteInfo.username%>
                                         </li>
                                     </ul>
                                 </div>
@@ -97,35 +114,44 @@
                             <div class="timeline-alter">
                                 <div class="item-timeline">
                                     <div class="t-meta-date">
-                                        <p class="">04 Mar 2009</p>
+                                        <p class="">
+                                            <%= hostelliteInfo.education.school.start %>
+                                        </p>
                                     </div>
                                     <div class="t-dot" data-original-title="" title="">
                                     </div>
                                     <div class="t-text">
-                                        <p>Royal Collage of Art</p>
-                                        <p>Designer Illustrator</p>
+                                        <p>
+                                            <%= hostelliteInfo.education.school.name %>
+                                        </p>
                                     </div>
                                 </div>
                                 <div class="item-timeline">
                                     <div class="t-meta-date">
-                                        <p class="">25 Apr 2014</p>
+                                        <p class="">
+                                            <%= hostelliteInfo.education.college.start %>
+                                        </p>
                                     </div>
                                     <div class="t-dot" data-original-title="" title="">
                                     </div>
                                     <div class="t-text">
-                                        <p>Massachusetts Institute of Technology (MIT)</p>
-                                        <p>Designer Illustrator</p>
+                                        <p>
+                                            <%= hostelliteInfo.education.school.name %>
+                                        </p>
                                     </div>
                                 </div>
                                 <div class="item-timeline">
                                     <div class="t-meta-date">
-                                        <p class="">04 Apr 2018</p>
+                                        <p class="">
+                                            <%= hostelliteInfo.education.degree.start %>
+                                        </p>
                                     </div>
                                     <div class="t-dot" data-original-title="" title="">
                                     </div>
                                     <div class="t-text">
-                                        <p>School of Art Institute of Chicago (SAIC)</p>
-                                        <p>Designer Illustrator</p>
+                                        <p>
+                                            <%= hostelliteInfo.education.degree.name %>
+                                        </p>
                                     </div>
                                 </div>
                             </div>
@@ -139,13 +165,17 @@
                                 <div class="">
                                     <ul class="contacts-block list-unstyled">
                                         <li class="contacts-block__item">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                                                viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-                                                stroke-linecap="round" stroke-linejoin="round"
-                                                class="feather feather-map-pin">
-                                                <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path>
-                                                <circle cx="12" cy="10" r="3"></circle>
-                                            </svg>Hostel number: hostel 3, Room number 322
+                                            <div class="d-flex flex-column justify-content-center align-items-center">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                                    viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                                    stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                                                    class="feather feather-map-pin mb-2">
+                                                    <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path>
+                                                    <circle cx="12" cy="10" r="3"></circle>
+                                                </svg>
+                                                Hostel# : <%= hostelliteInfo.hostelInfo.hostelNo %> <br> Room# :
+                                                    <%= hostelliteInfo.hostelInfo.roomNo %>
+                                            </div>
                                         </li>
                                     </ul>
                                 </div>
